# weather-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
providers/open_weather/: Cargo.toml
providers/open_weather/src/: api_config.rs  error.rs  lib.rs  protocol.rs
providers/weather_api/: Cargo.toml
providers/weather_api/src/: api_config.rs  builder.rs  error.rs  lib.rs  protocol.rs
weather/: Cargo.toml
weather-abstractions/: Cargo.toml
weather-abstractions/src/: builder.rs  lib.rs  models.rs  utils.rs
weather-provider/: Cargo.toml
weather-provider/src/: builder.rs  error.rs  lib.rs  models.rs  utils.rs
weather/src/: args.rs  commands.rs  error.rs  main.rs  settings.rs  user_output.rs
weather/src/commands/: configure.rs  get.rs  info.rs  reset.rs
