[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
weather-provider = { path = "../weather-provider" }
open_weather = { path = "../providers/open_weather" }
weather_api = { path = "../providers/weather_api" }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt", "macros", "fs"] }
config = "0.13.3"
directories = "4.0.1"
colored = "2.0.0"
